Fixed where nav active class is applied. Fixed first Read More news button not translating to spanish.

--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
@@ -29,7 +29,7 @@
                                 <a data-i18n="garden-information" class="dropBtn" href="#garden-information"></a>
                                 <div class="dropDown-content">
                                     <a data-i18n="hours" href="hours.html"></a>
-                                    <a data-i18n="events" href="events.html"></a>
+                                    <a data-i18n="events" class="active" href="events.html"></a>
                                     <a data-i18n="garden-rules" href="rules.html"></a>
                                     <a data-i18n="officers" href="officers.html"></a>
                                     <a data-i18n="rules-and-requirements" href="garden-member-rules-and-requirements.html"></a>
