--- a/membership.html
+++ b/membership.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
@@ -36,7 +36,7 @@
                                     <a data-i18n="responsibilities" href="garden-member-responsibilities.html"></a>
                                 </div>   
                             </li>
-                        <li><a data-i18n="membership" href="membership.html"></a></li>
+                        <li><a data-i18n="membership" class="active" href="membership.html"></a></li>
                         
                         <li class="dropDown">
                             <a data-i18n="language" class="dropBtn" href="#language"></a>
