--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
@@ -76,7 +76,7 @@
                         <div class="article-text">
                             <h2>Thanksgiving Family Portrait</h2>
                             <p>You are invited to the <b>Thanksgiving Family Portrait sessions</b> on November 25th, 26th & 27th between 10-2pm. Spots are...</p>
-                            <a class="classicBtn" href="news-story2.html">Read More</a>
+                            <a data-i18n="read-more" class="classicBtn" href="news-story2.html"></a>
                         </div>
                     </article>
                     <article>
