--- a/hours.html
+++ b/hours.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
@@ -28,7 +28,7 @@
                             <li class="dropDown">
                                 <a data-i18n="garden-information" class="dropBtn" href="#garden-information"></a>
                                 <div class="dropDown-content">
-                                    <a data-i18n="hours" href="hours.html"></a>
+                                    <a data-i18n="hours" class="active" href="hours.html"></a>
                                     <a data-i18n="events" href="events.html"></a>
                                     <a data-i18n="garden-rules" href="rules.html"></a>
                                     <a data-i18n="officers" href="officers.html"></a>
