--- a/news-story2.html
+++ b/news-story2.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
