--- a/partners.html
+++ b/partners.html
@@ -15,13 +15,13 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
                             <a data-i18n="history" href="history.html"></a>
                             <a data-i18n="garden-photos" href="garden-photos.html"></a>
-                            <a data-i18n="partners-and-sponsors" href="partners.html"></a>
+                            <a data-i18n="partners-and-sponsors" class="active" href="partners.html"></a>
                         </div>
                     </li>
                         <li><a data-i18n="compost" href="compost.html"></a></li>
