--- a/rules.html
+++ b/rules.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
@@ -30,7 +30,7 @@
                                 <div class="dropDown-content">
                                     <a data-i18n="hours" href="hours.html"></a>
                                     <a data-i18n="events" href="events.html"></a>
-                                    <a data-i18n="garden-rules" href="rules.html"></a>
+                                    <a data-i18n="garden-rules" class="active" href="rules.html"></a>
                                     <a data-i18n="officers" href="officers.html"></a>
                                     <a data-i18n="rules-and-requirements" href="garden-member-rules-and-requirements.html"></a>
                                     <a data-i18n="responsibilities" href="garden-member-responsibilities.html"></a>
