Finished Spanish translations except for news stories. Fixed active btn class applications (for real this time). Fixed responsive image sizing for news story previews on index page for desktop view.

--- a/compost.html
+++ b/compost.html
@@ -15,7 +15,7 @@
         <div class="header-container">
             <div class="nav">
                 <ul class="nav-links">
-                    <li><a data-i18n="home" class="active" href="index.html"></a></li>
+                    <li><a data-i18n="home" href="index.html"></a></li>
                     <li class="dropDown">
                         <a data-i18n="about" class="dropBtn" href="javascript:void(0)"></a>
                         <div class="dropDown-content">
@@ -24,7 +24,7 @@
                             <a data-i18n="partners-and-sponsors" href="partners.html"></a>
                         </div>
                     </li>
-                        <li><a data-i18n="compost" href="compost.html"></a></li>
+                        <li><a data-i18n="compost" class="active" href="compost.html"></a></li>
                             <li class="dropDown">
                                 <a data-i18n="garden-information" class="dropBtn" href="#garden-information"></a>
                                 <div class="dropDown-content">
