--- a/officers.html
+++ b/officers.html
@@ -26,12 +26,12 @@
                     </li>
                         <li><a data-i18n="compost" href="compost.html"></a></li>
                             <li class="dropDown">
-                                <a data-i18n="garden-information" class="dropBtn" href="#garden-information"></a>
+                                <a data-i18n="garden-information" class="dropBtn active" href="#garden-information"></a>
                                 <div class="dropDown-content">
                                     <a data-i18n="hours" href="hours.html"></a>
                                     <a data-i18n="events" href="events.html"></a>
                                     <a data-i18n="garden-rules" href="rules.html"></a>
-                                    <a data-i18n="officers" class="active" href="officers.html"></a>
+                                    <a data-i18n="officers" href="officers.html"></a>
                                     <a data-i18n="rules-and-requirements" href="garden-member-rules-and-requirements.html"></a>
                                     <a data-i18n="responsibilities" href="garden-member-responsibilities.html"></a>
                                 </div>   
