--- a/events.html
+++ b/events.html
@@ -26,10 +26,10 @@
                     </li>
                         <li><a data-i18n="compost" href="compost.html"></a></li>
                             <li class="dropDown">
-                                <a data-i18n="garden-information" class="dropBtn" href="#garden-information"></a>
+                                <a data-i18n="garden-information" class="dropBtn active" href="#garden-information"></a>
                                 <div class="dropDown-content">
                                     <a data-i18n="hours" href="hours.html"></a>
-                                    <a data-i18n="events" class="active" href="events.html"></a>
+                                    <a data-i18n="events" href="events.html"></a>
                                     <a data-i18n="garden-rules" href="rules.html"></a>
                                     <a data-i18n="officers" href="officers.html"></a>
                                     <a data-i18n="rules-and-requirements" href="garden-member-rules-and-requirements.html"></a>
@@ -64,8 +64,8 @@
 
         <main>
             <div class="events">
-                <h1>Upcoming Events</h1>
-                <p>No events at the moment.</p>
+                <h1 data-i18n="upcoming-events"></h1>
+                <p data-i18n="no-events-atm"></p>
             </div>
             <div class="events-img">
                 <img src="https://i.postimg.cc/J0scN4L9/IMG-3145.avif">
