--- a/hours.html
+++ b/hours.html
@@ -26,9 +26,9 @@
                     </li>
                         <li><a data-i18n="compost" href="compost.html"></a></li>
                             <li class="dropDown">
-                                <a data-i18n="garden-information" class="dropBtn" href="#garden-information"></a>
+                                <a data-i18n="garden-information" class="dropBtn active" href="#garden-information"></a>
                                 <div class="dropDown-content">
-                                    <a data-i18n="hours" class="active" href="hours.html"></a>
+                                    <a data-i18n="hours" href="hours.html"></a>
                                     <a data-i18n="events" href="events.html"></a>
                                     <a data-i18n="garden-rules" href="rules.html"></a>
                                     <a data-i18n="officers" href="officers.html"></a>
@@ -64,9 +64,9 @@
 
         <main>
             <div class="hours">
-                <h1>Open Hours</h1>
-                <p>During open hours, everyone is welcome to visit the garden!</p>
-                <p>Open hours are every Saturday and Sunday from <b>1 to 6pm</b>, starting in early April and ending in late October.</p>
+                <h1 data-i18n="open-hours"></h1>
+                <p data-i18n="open-hrs1"></p>
+                <p data-i18n="open-hrs2"></p>
             </div>
             <div class="hours-img">
                 <img src="https://i.postimg.cc/524yTKHt/IMG-3162.avif">
