--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
         .News > .news-container > .news-story > article > .news-img > img{
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
         .News > .news-container > li{
             margin-top: 4rem;
@@ -471,6 +472,7 @@
         font-size: 40px;
     }
 </style>
+
 
 
 
